--- a/_cases/2022/DIVD-2022-00053.md
+++ b/_cases/2022/DIVD-2022-00053.md
@@ -30,25 +30,25 @@ timeline:
 
 On 24 August 2022, Atlassian released a security advisory for CVE-2022-36804.
 
-The vulnerability allows an unauthenticated attacker to execute arbitrary code on a Bitbucket Server instance, however a prerequisite for exploitation is that at least one repository is set to public access for anonymous users.
+The vulnerability allows an unauthenticated attacker to execute arbitrary code on a Bitbucket Server instance. This vulnerability can only be exploited when at least one repository is set to 'public access'.
 
-All versions released after 6.10.17 including 7.0.0 and newer are affected, this means that all instances that are running any versions between 7.0.0 and 8.3.0 inclusive are affected by this vulnerability.
+All versions released from 7.0.0 and newer are affected. Every Bitbucket Server that uses a version between 7.0.0 and 8.3.0 is affected by this vulnerability.
 
-Exploitation likeability is high, as the exploit code is readily available.
+It is very likely that this vulnerability is actively exploited, since the exploit code is readily available.
 
 ## What you can do
 
-Users with this vulnerable versions should update as fast as possible. Atlassian released updates for all affected versions.
+Users with these vulnerable versions should update as soon as possible. Bitbucket's vendor (Atlassian) released updates for all affected versions.
 
-We recommend ACLs to limit access to the Bitbucket environment to trusted users, an practical example would be to only allow access to the console from the local/virtual network your infrastructure is running on.
+Review whether your public repositories are set to public on purpose or by accident. Review this on the repository details page and change the visibility of the repository if needed.
 
-Review whether your public repositories are public purposefully or by accident. You can review this in the repository details page and change the visibility of the repository if needed.
+If you had a vulnerable version with a public repository, we recommend to check your server logs for any suspicious activity.
 
-We suggest to inspect your sever logs for any suspicious activity.
+In general, we recommend ACLs to limit access to the Bitbucket environment to trusted users. 
 
 ## What we are doing
 
-We are scanning the internet for vulnerable Bitbucket instances, and will notify system owners via the listed abuse contacts.
+We are actively scanning the internet for vulnerable Bitbucket instances and will notify system owners via the listed abuse contacts.
 
 {% include timeline.html %}
 
