Let's not break the pipeline

--- a/_cases/2022/DIVD-2022-00021.md
+++ b/_cases/2022/DIVD-2022-00021.md
@@ -47,6 +47,7 @@ timeline:
   event: Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)
 - start: 2022-09-20
 - event: Rescan, notifications sent out
+- end:
 
 ---
 ## Summary
