--- a/_cases/2022/DIVD-2022-00053.md
+++ b/_cases/2022/DIVD-2022-00053.md
@@ -24,6 +24,10 @@ timeline:
 - start: 2022-09-21
   end:
   event: "DIVD starts scanning for vulnerable Bitbucket instances."
+- start: 2022-09-22
+  end:
+  event: "DIVD starts first round of notifications."
+
 ---
 
 ## Summary
