--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -39,7 +39,7 @@ This vulnerability allows authenticated attackers to achieve Remote Command Exec
 
 Exchange Online customers are protected against these attacks. Customers running an on-premises installation of Exchange Server 2013, 2016 and 2019 are advised to apply one of the suggested mitigations in the Security Advisory. 
 
-So far, Microsoft has observed a limited amount of targeted attacks using these vulnerabilities. Because both vulnerabilities require authentication, mass-exploitation is hard. Regardless, it is advised to mitigate these vulnerabilities as soon as possible.
+So far, Microsoft has observed a limited amount of targeted attacks using these vulnerabilities. Because both vulnerabilities require authentication, mass-exploitation is hard. Regardless, it is advised to mitigate these vulnerabilities as soon as possible as exploitation could lead to the compromise of integrity, availability and confidentiality on systems.  
 
 ## What you can do
 
