--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -51,7 +51,7 @@ The suggested mitigations by Microsoft include disabling remote access to PowerS
 
 ## What we are doing
 
-We are actively scanning the internet for vulnerable Exchange instances and will notify system owners via the listed abuse contacts. 
+We are actively scanning the internet for Exchange instances that do not have the mitigations applied and will notify system owners via the listed abuse contacts. 
 
 {% include timeline.html %}
 
