--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -33,7 +33,7 @@ timeline:
 
 ## Summary
 
-On September 30th 2022, GTSC Vietnam published a writeup on a discovered campaign utilising a new RCE zeroday in Microsoft Exchange. Shortly after, Microsoft published a security advisory alongside CVE IDs CVE-2022-41040 and CVE-2022-41082 with CVSS scores 8.8 and 6.3, respectively.
+On September 30th 2022, GTSC Vietnam published a write-up on a discovered campaign utilizing a zero-day vulnerability in Microsoft Exchange. Shortly after, Microsoft published a security advisory alongside CVE IDs CVE-2022-41040 and CVE-2022-41082 with CVSS scores 8.8 and 6.3, respectively.
 
 This vulnerability allows authenticated attackers to achieve Remote Command Execution when Exchange PowerShell is accessible. An attacker may achieve this through chaining CVE-2022-41040, an SSRF vulnerability, with CVE-2022-41082, which is the RCE vulnerability.
 
