--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -37,7 +37,7 @@ On September 30th 2022, GTSC Vietnam published a write-up on a discovered campai
 
 This vulnerability allows authenticated attackers to achieve Remote Command Execution when Exchange PowerShell is accessible. An attacker may achieve this through chaining CVE-2022-41040, an SSRF vulnerability, with CVE-2022-41082, which is the RCE vulnerability.
 
-Exchange Online customers are protected against these attacks. Customers running an on-premises installation of Exchange Server 2013, 2016 and 2019 are advised to apply one of the suggested mitigations in the Security Advisory. 
+Exchange Online customers are protected against these attacks. Customers running an on-premises installation of Exchange Server 2013, 2016 and 2019 are advised to apply one of the suggested mitigations in the [Security Advisory](https://msrc-blog.microsoft.com/2022/09/29/customer-guidance-for-reported-zero-day-vulnerabilities-in-microsoft-exchange-server/). 
 
 So far, Microsoft has observed a limited amount of targeted attacks using these vulnerabilities. Because both vulnerabilities require authentication, mass-exploitation is hard. Regardless, it is advised to mitigate these vulnerabilities as soon as possible as exploitation could lead to the compromise of integrity, availability and confidentiality on systems.  
 
@@ -45,9 +45,9 @@ So far, Microsoft has observed a limited amount of targeted attacks using these 
 
 Companies running Exchange Server 2013, 2016 or 2019 (on-premises) should mitigate these vulnerabilities as soon as possible using the mitigations suggested in the advisory. Furthermore, it is important to keep a close eye on published patches for these issues.
 
-If you have been running Exchange Server, we recommend to check your server logs for any suspicious activity.
+If you have been running Exchange Server, we recommend to check your server logs for any suspicious activity such as installation of the [Chopper Web Shell](https://en.wikipedia.org/wiki/China_Chopper) or any arbitrary PowerShell commands. 
 
-The suggested mitigations by Microsoft include disabling remote access to PowerShell for non-administrator users or using a URL Rewrite Rule. For guidance on implementing these mitigations, view the Security Advisory below. Moreover, detection rules for both vulnerabilities have been provided by Microsoft. For these, view Microsoft's blogpost on this topic using the URL below. 
+The suggested mitigations by Microsoft include disabling remote access to PowerShell for non-administrator users and using a URL Rewrite Rule. For guidance on implementing these mitigations, view the [Security Advisory](https://msrc-blog.microsoft.com/2022/09/29/customer-guidance-for-reported-zero-day-vulnerabilities-in-microsoft-exchange-server/). Moreover, detection rules for both vulnerabilities have been provided by Microsoft. For these, view Microsoft's [blogpost](https://www.microsoft.com/security/blog/2022/09/30/analyzing-attacks-using-the-exchange-vulnerabilities-cve-2022-41040-and-cve-2022-41082/) on this topic. 
 
 ## What we are doing
 
