--- a/_cases/2022/DIVD-2022-00038.md
+++ b/_cases/2022/DIVD-2022-00038.md
@@ -28,6 +28,9 @@ timeline:
 - start: 2022-08-31
   end:
   event: Second round of notifications sent to about 165 hosts
+  - start: 2022-10-05
+    end:
+    event: Second round of notifications sent to about 230 hosts
 ips: 295
 
 ---
