--- a/_cases/2022/DIVD-2022-00038.md
+++ b/_cases/2022/DIVD-2022-00038.md
@@ -37,7 +37,7 @@ ips: 295
 
 ## Summary
 
-In January '22 Oracle announced a critical patch update to mitigate multiple security vulnerabilities for their WebLogic Servers. DIVD started notifying owners of IP addresses where instances vulnerable to CVE-2022-21371 were found. A patch is available to mitigate this issue. Recipients of this email are advised to immediately update their Oracle WebLogic instance.
+In January 2022 Oracle announced a critical patch update to mitigate multiple security vulnerabilities for their WebLogic Servers. DIVD started notifying owners of IP addresses where instances vulnerable to CVE-2022-21371 were found. A patch is available to mitigate this issue. Recipients of this email are advised to immediately update their Oracle WebLogic instance.
 
 ## Impact
 
