--- a/_cases/2022/DIVD-2022-00038.md
+++ b/_cases/2022/DIVD-2022-00038.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "DIVD-2022-00038 - Vulnerable Oracle WebLogic Server"
+title: DIVD-2022-00038 - Vulnerable Oracle WebLogic Server
 divd: DIVD-2022-00038
 excerpt: "Patch vulnerable Oracle WebLogic servers immediately as some versions are vulnerable for an Local File Inclusion Attack, which causes secrets and sourcecode to be readable by malicious attackers. DIVD is actively notifying owners of vulnerable systems"
 author: Tom Wolters
@@ -9,7 +9,7 @@ status: Open
 researchers:
 - Tom Wolters
 cves: CVE-2022-21371
-product: "Oracle WebLogic Server"
+product: Oracle WebLogic Server
 versions: "12.1.3.0.0, 12.2.1.3.0, 12.2.1.4.0 and 14.1.1.0.0"
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 patch_status: Available
@@ -26,9 +26,9 @@ timeline:
 - start: 2022-08-31
   end:
   event: Second round of notifications sent to about 165 hosts
-  - start: 2022-10-05
-    end:
-    event: Second round of notifications sent to about 230 hosts
+- start: 2022-10-05
+  end:
+  event: Second round of notifications sent to about 230 hosts
 ips: 295
 ---
 ## Summary
