--- a/_cases/3000/DIVD-3000-00001.md
+++ b/_cases/3000/DIVD-3000-00001.md
@@ -21,7 +21,7 @@ versions:
 recommendation: This is where you type you recommended action for those reading this case
 patch_status: Full patched
 -workaround: n/a
-status : Openlike
+status : Open
 start: 2021-12-07
 end: 
 timeline:
