--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -3,7 +3,7 @@ layout: case
 title: ProxyNotShell - Microsoft Exchange SSRF and RCE
 author: Max van der Horst
 lead: Max van der Horst
-status: Openlike
+status: Open
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-41040 and CVE-2022-41082 (nicknamed ProxyNotShell).
 researchers:
 - Ralph Horn
