chore: add more context to case file

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -33,8 +33,13 @@ timeline:
 ## Summary
 
 On January 5 H2 published an advisory about CVE-2021-42392 and released a new version.
+Versions between 1.1.100 and 2.1.210 allow unauthenticated attackers to execute any code on your server by loading custom classes from remote servers. It is easily exploitable and both have a CVSSv3 score of 9.8.
 
-Exploitation likeability is high, as the exploit code is readily available.
+The vulnerability is currently reported as exploited in the wild, both proof of concepts are available on the internet, CVE-2022-23221 being the most shared one.
+
+Patches and workarounds are available to remediate the vulnerability. Users with this vulnerable versions should update as fast as possible.
+
+Exploitation likeability is high. DIVD recommends to update and do not expose the console to untrusted users.
 
 ## What you can do
 
@@ -56,5 +61,4 @@ We are scanning the internet for vulnerable H2 Console servers, and will notify 
 * [The JNDI Strikes Back – Unauthenticated RCE in H2 Database Console](https://jfrog.com/blog/the-jndi-strikes-back-unauthenticated-rce-in-h2-database-console/)
 * {% cve CVE-2022-23221 %}
 * [H2 Database Console Remote Code Execution](https://packetstormsecurity.com/files/165676/H2-Database-Console-Remote-Code-Execution.html)
-
 
