trigger pipeline re-run

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -39,7 +39,7 @@ The vulnerability is currently reported as exploited in the wild, both proof of 
 
 Patches and workarounds are available to remediate the vulnerability. Users with this vulnerable versions should update as fast as possible.
 
-Exploitation likeability is high. DIVD recommends to update and do not expose the console to untrusted users.
+Exploitation likeability is high. We recommend to update and to not expose the console to untrusted users.
 
 ## What you can do
 
