add initial casefile draft

--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -9,6 +9,7 @@ status: Open
 researchers:
 - Tom Wolters
 - Pepijn van der Stap
+- Melvin Boers
 cves: n/a
 product: n/a
 versions: any, for hardware it depends on the firmware shipped by the hardware vendor
