--- a/_cases/2021/DIVD-2021-00015.md
+++ b/_cases/2021/DIVD-2021-00015.md
@@ -31,6 +31,9 @@ timeline:
   end:
   event: DIVD starts processing this data and starts with the victim notification process.
 ips: 0
+- start: 2022-10-10
+  end:
+  event: "Case closed no further actionable steps can be taken"
 ---
 ## Summary
 
