--- a/_cases/2021/DIVD-2021-00021.md
+++ b/_cases/2021/DIVD-2021-00021.md
@@ -4,7 +4,7 @@ title: "Qlik Sense Enterprise domain user enumeration"
 excerpt: "Domain user enumeration via response timing"
 author: Hidde Smit
 lead: Diego Klinkhamer
-status : Open
+status : Closed
 researchers:
 - Hidde Smit
 cves: CVE-2022-0564
@@ -32,7 +32,7 @@ timeline:
   event:  "DIVD notified about patch by vendor."
 - start: 2022-03-01
   end:
-  event: "DIVD sent out a first batch of notifications."
+  event: "DIVD sent out a first batch of notifications."  
 ---
 ## Summary
 
@@ -53,3 +53,4 @@ On 18 August 2021, DIVD discovered a timing attack vulnerability. This vulnerabi
 * [CVE](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2022-0564)
 * [CVE-2022-0564](https://csirt.divd.nl/cves/CVE-2022-0564/)
 * [Qlik Sense Release Notes - issue QB-6867](https://community.qlik.com/t5/Release-Notes/Qlik-Sense-Enterprise-on-Windows-November-2021-Initial-Release/ta-p/1856531)
+* [Our end report](https://www.divd.nl/reports/2021-00021%20-%20Qlik%20Sense/)
