changed status to closed

--- a/_cases/2021/DIVD-2021-00015.md
+++ b/_cases/2021/DIVD-2021-00015.md
@@ -7,7 +7,7 @@ author: Victor Gevers
 lead: Victor Gevers
 redirect_from:
   - /DIVD-2021-00015/
-status : Open
+status : Closed
 excerpt: One of our researchers has discovered a Telegram group that shares millions of usernames and passwords that criminals have stolen from their victims.
 researchers:
 - Victor Pasman
