--- a/_cases/2021/DIVD-2021-00022.md
+++ b/_cases/2021/DIVD-2021-00022.md
@@ -7,7 +7,7 @@ author: Frank Breedijk
 lead: Frank Breedijk
 redirect_from:
   - /DIVD-2021-00022/
-status : Open
+status : Closed
 excerpt: We will be scanning for the vulnerabilities related to the ProxyShell and ProxyOracle attacks against Microsoft Exchange.
 researchers:
 - Victor Pasman
@@ -42,6 +42,9 @@ timeline:
 - start: 2021-08-30   
   end:
   event: DIVD releases [scan script](https://github.com/DIVD-NL/ProxyOracleNSE) for CVE-2021-31195
+- start: 2022-10-10
+  end:
+  event: Closing this case
 ips: 0
 ---
 ## Summary
@@ -62,6 +65,8 @@ If you are having trouble getting your Exchange server patched, we suggest that 
 ## What we are doing
 
 We have made an [NSE script for ProxyOracle](https://github.com/DIVD-NL/ProxyOracleNSE) available via out GitHub account. We are going to scan internet facing Exchange servers for ProxyOracle and ProxyShell (via [Kevin beaumont's script](https://github.com/GossiTheDog/scanning/blob/main/http-vuln-exchange-proxyshell.nse))
+
+For us this case has ended, anyone still vulnerable to these issues over a year after patches were made available will be notified of this together with [case 2022-00054](https://csirt.divd.nl/cases/DIVD-2022-00054/).
 
 {% include timeline.html %}
 
