--- a/_cases/2021/DIVD-2021-00029.md
+++ b/_cases/2021/DIVD-2021-00029.md
@@ -17,7 +17,7 @@ versions: All versions / v100.0.8019.14010
 recommendation: Upgrade to the latest version
 patch status: Fully patched
 -workaround: n/a
-status : Open
+status : Closed
 excerpt: Several vulnerabilities have been found in the helpdesk software called SmarterTrack made by SmarterTools.
 start: 2021-10-17
 end: 
@@ -64,6 +64,9 @@ timeline:
 - start: 2022-03-12
   end: 
   event: Limited Disclosure
+- start: 2022-10-10
+  end: 
+  event: Case Closed
 ips: n/a
 ---
 ## Summary
