fix(pipeline): hacky re-run

--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -12,7 +12,7 @@ researchers:
 - Melvin Boers
 cves: n/a
 product: n/a
-versions: any, for hardware it depends on the firmware shipped by the hardware vendor
+versions: any. For hardware it depends on the firmware shipped by the hardware vendor
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 patch_status: n/a
 start: 2022-10-08
