fix(pipeline): hacky re-run

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -14,7 +14,7 @@ cves:
 - CVE-2022-23221
 product: H2 Web Console
 versions: 1.1.100-2.1.210
-recommendation: "Update and do not expose the console to untrusted users."
+recommendation: Update and do not expose the console to untrusted users.
 workaround: Do not expose the console to untrusted users.
 start: 2022-09-09
 end:
