--- a/_cases/2021/DIVD-2021-00037.md
+++ b/_cases/2021/DIVD-2021-00037.md
@@ -26,7 +26,7 @@ product:
 recommendation: Update the ITarian Endpoint Manager Communication Client wherever possible. Stop using the On-Premise version.
 patch_status: Not patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2021-12-01
 end: 
 timeline:
@@ -95,6 +95,12 @@ timeline:
 - start: 2022-07-01
   end:   
   event: "Planned full disclosure"
+- start: 2022-08-10
+  end:   
+  event: "Full disclosure"
+- start: 2022-10-10
+  end:   
+  event: "Case Closed"
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 #
