Closing divd-2021-00038 retroactively

--- a/_cases/2021/DIVD-2021-00038.md
+++ b/_cases/2021/DIVD-2021-00038.md
@@ -7,7 +7,7 @@ author: Victor Pasman
 lead: Victor Gevers
 redirect_from:
   - /DIVD-2021-00038/
-status : Open
+status : Closed
 excerpt: We will be scanning for CVE-2021-44228
 researchers:
 - Victor Gevers
@@ -51,6 +51,9 @@ timeline:
 - start: 2021-12-19
   end:
   event: "DIVD sent out a third batch of notifications."
+- start: 2022-04-05
+  end:
+  event: "Report published and case closed"
 
 ---
 ## Summary
