--- a/_cases/2021/DIVD-2021-00039.md
+++ b/_cases/2021/DIVD-2021-00039.md
@@ -7,7 +7,7 @@ author: Patrick Hulshof
 lead: Victor Gevers
 redirect_from:
 - /DIVD-2021-00039/
-status : Open
+status : Closed
 excerpt: We will be scanning for open-iLO ports
 researchers:
 - Victor Gevers
@@ -44,6 +44,9 @@ timeline:
 - start: 2022-02-15
   end:
   event: DIVD sent out a second batch of notifications.
+- start: 2022-03-09
+  end:
+  event: After two rounds of notifications this case ends here for us.
 ips: 8596
 ---
 ## Summary
