Set a close date

--- a/_cases/2021/DIVD-2021-00039.md
+++ b/_cases/2021/DIVD-2021-00039.md
@@ -21,7 +21,7 @@ recommendation: "Update the iLO firmware version to the latest official release 
 patch_status: latest patch 2.79
 -workaround: n/a
 start: 2021-12-31
-end:
+end: 2022-03-09
 timeline:
 - start: 2021-12-28
   end:
