--- a/_cases/2021/DIVD-2021-00029.md
+++ b/_cases/2021/DIVD-2021-00029.md
@@ -20,7 +20,7 @@ patch status: Fully patched
 status : Closed
 excerpt: Several vulnerabilities have been found in the helpdesk software called SmarterTrack made by SmarterTools.
 start: 2021-10-17
-end: 
+end:   2022-10-10
 timeline:
 - start: 2021-10-17
   end:
