--- a/_cases/2021/DIVD-2021-00037.md
+++ b/_cases/2021/DIVD-2021-00037.md
@@ -28,7 +28,7 @@ patch_status: Not patched
 #workaround: n/a
 status : Closed
 start: 2021-12-01
-end: 
+end:   2022-10-10
 timeline:
 - start: 2021-12-01
   end:
