--- a/_cases/2021/DIVD-2021-00038.md
+++ b/_cases/2021/DIVD-2021-00038.md
@@ -28,7 +28,7 @@ Install the latest version of log4j version 2.17.1"
 patch_status:	 	Full patched
 -workaround:		n/a
 start: 2021-12-09
-end:
+end:   2022-04-05
 timeline:
 - start: 2021-12-09
   end:
