--- a/_cases/2021/DIVD-2021-00022.md
+++ b/_cases/2021/DIVD-2021-00022.md
@@ -25,7 +25,7 @@ Apply the patches released in April and Juli"
 patch_status:	 	Full patched
 -workaround:		Available
 start: 2021-08-30
-end:
+end:   2022-10-10
 timeline:
 - start: 2021-04-13
   end: 
@@ -45,7 +45,7 @@ timeline:
 - start: 2022-10-10
   end:
   event: Closing this case
-ips: 0
+ips: 7533
 ---
 ## Summary
 
