--- a/_cases/2021/DIVD-2021-00022.md
+++ b/_cases/2021/DIVD-2021-00022.md
@@ -66,7 +66,7 @@ If you are having trouble getting your Exchange server patched, we suggest that 
 
 We have made an [NSE script for ProxyOracle](https://github.com/DIVD-NL/ProxyOracleNSE) available via out GitHub account. We are going to scan internet facing Exchange servers for ProxyOracle and ProxyShell (via [Kevin beaumont's script](https://github.com/GossiTheDog/scanning/blob/main/http-vuln-exchange-proxyshell.nse))
 
-For us this case has ended, anyone still vulnerable to these issues over a year after patches were made available will be notified of this together with [case 2022-00054](https://csirt.divd.nl/cases/DIVD-2022-00054/).
+For us this case has ended, anyone still vulnerable to these issues over a year after patches were made available will be notified of this together with [case 2022-00054](/cases/DIVD-2022-00054/).
 
 {% include timeline.html %}
 
