--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -13,7 +13,7 @@ researchers:
 cves: n/a
 product: n/a
 versions: any. For hardware it depends on the firmware shipped by the hardware vendor
-recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
+recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in the notification."
 patch_status: n/a
 start: 2022-10-08
 end: 
