--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -34,7 +34,7 @@ DIVD started looking for vulnerabilities worldwide. This effort is aimed at vuln
 
 * If you receive a notification, make sure the vulnerability described in that notification is patched. The notification will be sent along with a location and description of the vulnerability. If you have any questions regarding the mitigation of these vulnerabilities, feel free to reply to the email, and we'll gladly help!
 
-IT and IT security teams should consider putting the instance on a separate network, and only allow access to it from a trusted network. This will prevent attackers from accessing the management interface from the internet.
+IT and IT security teams should consider putting the instance on a separate network, and only allow access to it from a trusted network, via a stepping stone/bastion server, or via VPN. This will prevent attackers from accessing the management interface from the internet.
 
 ## What we are doing
 
