--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -27,7 +27,7 @@ ips: n/a
 
 ## Summary
 
-DIVD started looking for vulnerabilities worldwide. This effort is aimed at vulnerabilities regarding (hardware) server management interfaces. These interfaces are often exposed to the internet and are not protected by default. This makes them a target for attackers. DIVD is researching vulnerabilities in (hardware) server management interfaces globally and notifying the owners of misconfigured services.
+DIVD started looking for  vulnerabilities regarding (hardware) server management interfaces, worldwide. These interfaces are often exposed to the internet and are not protected by default. This makes them a target for attackers. DIVD is researching vulnerabilities in (hardware) server management interfaces globally and notifying the owners of misconfigured services.
 
 
 ## What you can do
