--- a/_cases/2021/DIVD-2021-00021.md
+++ b/_cases/2021/DIVD-2021-00021.md
@@ -16,7 +16,7 @@ jekyll-secinfo:
   cve:
     url: /cves/CVE-
 start: 2021-08-18
-end:
+end: 2022-04-01
 timeline:
 - start: 2021-08-18
   end:
@@ -33,6 +33,9 @@ timeline:
 - start: 2022-03-01
   end:
   event: "DIVD sent out a first batch of notifications."  
+- start: 2022-04-01
+  end:
+  event: "Case closed."  
 ---
 ## Summary
 
