--- a/_cases/2021/DIVD-2021-00015.md
+++ b/_cases/2021/DIVD-2021-00015.md
@@ -33,6 +33,7 @@ timeline:
 - start: 2022-10-10
   end:
   event: "Case closed no further actionable steps can be taken"
+ips: n/a
 ---
 ## Summary
 
