--- a/_cases/2021/DIVD-2021-00037.md
+++ b/_cases/2021/DIVD-2021-00037.md
@@ -97,7 +97,7 @@ timeline:
   event: "Planned full disclosure"
 - start: 2022-08-10
   end:   
-  event: "Full disclosure"
+  event: "Full disclosure at https://csirt.divd.nl/2022/08/10/Itarian-Full-Disclosure/"
 - start: 2022-10-10
   end:   
   event: "Case Closed"
