--- a/_cases/2021/DIVD-2021-00015.md
+++ b/_cases/2021/DIVD-2021-00015.md
@@ -22,7 +22,7 @@ Change your passwords, check if credentials have been abused, check your compute
 -patch_status:	 	n/a
 -workaround:		Available
 start:  2021-06-10
-end:
+end: 2022-10-10
 timeline:
 - start: 2021-06-10
   end:
@@ -31,7 +31,7 @@ timeline:
   end:
   event: DIVD starts processing this data and starts with the victim notification process.
 - start: 2022-10-10
-  end:
+  end: 
   event: "Case closed no further actionable steps can be taken"
 ips: n/a
 ---
