--- a/_cases/2022/DIVD-2022-00008.md
+++ b/_cases/2022/DIVD-2022-00008.md
@@ -4,7 +4,7 @@ title: "XSS Zeroday in Zimbra"
 excerpt: "A new Zero-day XSS Vulnerability in Zimbra was published on the internet on the third of February 2022."
 author: Boaz Braaksma
 lead: Boaz Braaksma
-status : Open
+status : Closed
 researchers:
 - Ralph Horn
 - "Célistine Oosting"
@@ -15,7 +15,7 @@ versions: Zimbra version 8.8.15 P30 (8.8.15.1642752384.p30-1) and all prior vers
 recommendation: "Users of Zimbra version 8.8.15 need to re-apply the patch P30 (8.8.15.1643980846.p30-1) to obtain the fix for this vulnerability or should consider upgrading to version 9.0.0"
 -workaround: n/a
 start: 2021-12-14
-end:
+end: 2022-04-20
 timeline:
 - start: 2021-12-14
   end:
