Error in counting exposures

--- a/_cases/2022/DIVD-2022-00009.md
+++ b/_cases/2022/DIVD-2022-00009.md
@@ -40,7 +40,7 @@ timeline:
   event: "Jelle discovers that password was changed back to password in GitHub repo"
 - start: 2022-02-03
   end:   2022-07-02
-  event: Password exposed and service vulnerable - 1st time
+  event: Password exposed and service vulnerable - 2nd time
 - start: 2022-02-06
   event: "Case opened"
 - start: 2022-02-06
