Updates Case Lead-Researchers

--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -2,13 +2,14 @@
 layout: case
 title: Critical authentication bypass affecting FortiOS, FortiProxy, and FortiSwitchManager
 author: Tom Wolters
-lead: OPEN
+lead: Ralph Horn
 status: Open
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-40684
 researchers:
 - Tom Wolters
 - Pepijn van der Stap
 - Edwin van Vliet
+- Victor Pasman
 cves:
 - CVE-2022-40684
 product: FortiOS, FortiProxy, and FortiSwitchManager
