--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -13,7 +13,7 @@ researchers:
 cves:
 - CVE-2022-40684
 product: FortiOS, FortiProxy, and FortiSwitchManager
-versions: FortiOS: 7.0.0 to 7.0.6 and 7.2.0-7.2.1. FortiProxy: 7.0.0 to 7.0.6 and 7.2.0.
+versions: FortiOS, 7.0.0 to 7.0.6 and 7.2.0-7.2.1. FortiProxy, 7.0.0 to 7.0.6 and 7.2.0.
 recommendation: "Upgrade to FortiOS 7.0.7 or 7.2.2 or above, update FortiProxy 7.0.7 or 7.2.1 or above."
 workaround: "If updating is not possible, disable the internet facing administration functionality."
 start: 2022-10-07
