Shorter title because compiler

--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: Critical authentication bypass affecting FortiOS, FortiProxy, and FortiSwitchManager
+title: Critical authentication bypass affecting Fortigate products
 author: Tom Wolters
 lead: Ralph Horn
 status: Open
