Updated Case Leads

--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -2,7 +2,7 @@
 layout: case
 title: Critical authentication bypass affecting Fortigate products
 author: Tom Wolters
-lead: Ralph Horn
+lead: Ralph Horn and Victor Pasman
 status: Open
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-40684
 researchers:
