docs(fortigate): bump timeline

--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -31,6 +31,9 @@ timeline:
 - start: 2022-10-14
   end:
   event: "DIVD starts scanning for vulnerable Fortigate instances"
+- start: 2022-10-15
+  end:
+  event: "DIVD sends out first rounds of notifications"
 
 ---
 
