Fix mistyped url

--- a/_cases/2022/DIVD-2022-00013.md
+++ b/_cases/2022/DIVD-2022-00013.md
@@ -47,7 +47,7 @@ ips: 0
 ---
 ## Summary
 
-In August 2022, during his investigation into exposed LDAP servers, DIVD researcher [Jan Los](https:/www.divd.nl/team/Jan+Los/) notices that secure LDAP servers (too) often use a certificate with the subject `www.update.microsoft.com`. Using Shodan and the query `ssl:"www.update.microsoft.com` it is dermined that at that point in time:
+In August 2022, during his investigation into exposed LDAP servers, DIVD researcher [Jan Los](https://www.divd.nl/team/Jan+Los/) notices that secure LDAP servers (too) often use a certificate with the subject `www.update.microsoft.com`. Using Shodan and the query `ssl:"www.update.microsoft.com` it is dermined that at that point in time:
 
 * 357 listening on the LDAP port use a certificate with this name
 * 8180 listening on the HTTPS port use a certificate with this name
