Added update Fortigate case

--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -49,7 +49,7 @@ There is a public exploit available and the vulnerability is easy to exploit.
 
 We advise you to upgrade to FortiOS 7.0.7 or 7.2.2 or above, update FortiProxy 7.0.7 or 7.2.1 or above. If updating is not possible, disable the internet facing administration functionality.
 
-If you were running a Fortigate instance with this version, after updating, please consider investigating if there are new -or unknown- public SSH-keys installed on the server. If after updating, an added SSH-key will remain installed. If possible and relevant for your instance, consider disallowing public access to SSH.
+If you were running a Fortigate instance with this version, after updating, please consider investigating if there are new -or unknown- public SSH-keys installed on the server. Even after updating Fortigate, added SSH-keys will remain installed. If possible and relevant for your instance, consider disallowing public access to SSH.
 
 ## What we are doing
 
