--- a/_cases/2022/DIVD-2022-00013.md
+++ b/_cases/2022/DIVD-2022-00013.md
@@ -1,8 +1,7 @@
 ---
 layout: case
 title: The curious case of the odd update.microsoft.com certificates
-excerpt: "Please set this to and except of a few lines.
-Excerpts are shown on /cases"
+excerpt: "An exploration into a curious case where 13k+ servers are offering the same tls certificate"
 author: Frank Breedijk
 lead: Jan Los
 researchers:
@@ -17,9 +16,9 @@ versions:
 recommendation: If you get a notification about this, we recommend to investigate why this certificate is being served and take appropriate action.
 #patch_status: Full patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2022-10-05
-end: 
+end:   2022-10-23
 timeline:
 - start: 2022-02-05
   end:
@@ -36,13 +35,16 @@ timeline:
 - start: 2022-10-05
   end:
   event: "Ethics comittee explains earlier verdict, case is a go"
-- start: 2022-10-05
+- start: 2022-10-21
   end:
-  event: "Case is opened"
-- start: 2022-10-16
+  event: "Got a hint from the community"
+- start: 2022-10-23
   end:
   event: "Case file published"
-ips: 0
+- start: 2022-10-23
+  end:
+  event: "Case closed"
+ips: n/a
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
@@ -63,20 +65,30 @@ A second investigation on 27 Feb 2022 reveils that:
   - These 6 servers seem to be legit.
 
 Of the servers that have the `1073570f79136511ba45b44c923a55c69b97e91d3aaa2e06e5e657129ca809ff` fingerprint we kown the following:
-* The server has the private key for the certificate
+* The server that completes the handshare, has the private key for the certificate
 * The certificates are issued and signed by the `Microsoft Update CA`
 * Modern windows versions have a certificate for this subCA and it's Root, but the rootCA's certificate expired in May 2021
 * Apart for this expiration the certificate chain appears to be valid.
 
 The certificate for www.update.microsoft.com, signed by the `Microsoft Update CA` has been the issue of security troubles in the past, given [this tweet from Mikko](https://twitter.com/mikko/status/214263127007690752) and on 18 June 2012 Microsoft had to regenerate the entire certificate chain, accoording to [this article by Eric Romang](https://eromang.zataz.com/2012/06/18/update-microsoft-com-ssl-warnings-due-certificate-chain-update/).
 
+On the 21st of October, after a call for help into the Dutch o-irt-o community, we receive a possible explanation for this data. 
+
+We have seen this before and this is not as exciting as it seems. Back then this appeared to be NorthGhost/TouchVPN, which is corroborated by most hosts having port 1194/tcp open. It seems to be that these hosts use this certificate to avoid being blocked by content filtering. In our investigation, the hosts did not actually have the certificate themselves, but seemed to be forwarding/SRC-NATing the handhake to a valid Microsoft server.
+
+We have checked this with our data and our data seems to match with this explanation.
+
 ### Conclusion
 
-It is our conclusion that several thousands of servers that have the exact same certificate, and private key, associated with different ports cannot be good. The most likely scenatio is that we dealing with an infrastructure with criminal intent.
+Our suspicioun that these certificates belonged to a criminal infrastructure was disproven. The found servers seem to be part of the TouchVPN service. These servers employ a trick to avoid being blocked by content filtering solutions.
+
+TouchVPNs trick might be a bit doubious, but because the TLS handshake they offer results in an invalid chain because the chain has expired, the security risk is limited.
+
+This trick may result in TouchVPn being able to bypass certain content filtering devices, if those devices do not block invalid certificate chains.
 
 ## What we are doing
 
-We will reaching out to network owners aware of these servers in their network in the hope to find out more
+No futher action required.
 
 ## What you can do
 
