--- a/_cases/2022/DIVD-2022-00013.md
+++ b/_cases/2022/DIVD-2022-00013.md
@@ -17,7 +17,7 @@ recommendation: If you get a notification about this, we recommend to investigat
 #patch_status: Full patched
 #workaround: n/a
 status : Closed
-start: 2022-10-05
+start: 2022-02-05
 end:   2022-10-23
 timeline:
 - start: 2022-02-05
@@ -78,7 +78,7 @@ We have seen this before and this is not as exciting as it seems. Back then this
 
 We have checked this with our data and our data seems to match with this explanation.
 
-### Conclusion
+## Conclusion
 
 Our suspicioun that these certificates belonged to a criminal infrastructure was disproven. The found servers seem to be part of the TouchVPN service. These servers employ a trick to avoid being blocked by content filtering solutions.
 
