No naming and shaming

--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -21,12 +21,12 @@ timeline:
   end:
   event: Dossier opened
 - start: 2022-07-04
-  event: Reported credentials for goldwind.com.cn leaked via GitHub reported to CN Cert. Passwords have been changed.
+  event: Reported credentials for Chineeese wind farm management platform leaked via GitHub reported to CN Cert. Passwords have been changed.
 - start: 2022-07-13
   end: open
   event: DIVD-2022-00039
 - start: 2022-08-27
-  event: Reported credentials for Fluvius Sharepoint portal to Fluvius. Credentials where quickly invalidated and repo has removed.
+  event: Reported credentials for Sharepoint portal of Belgium grid operator leaked via GitHub. Credentials where quickly invalidated and repo has removed.
 ips: n/a
 ---
 
@@ -42,4 +42,4 @@ DIVD is using this dossier to track cases and findings that are related to this 
 {% include timeline.html %}
 
 ## More information
-* [DIVD-2022-00009 - Solarman backend administrator account/password](/DIVD-2022-00009/)
+* {% divd DIVD-2022-00009 %} - Solarman backend administrator account/password
