Adding publication date

--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -27,6 +27,8 @@ timeline:
   event: DIVD-2022-00039
 - start: 2022-08-27
   event: Reported credentials for Sharepoint portal of Belgium grid operator leaked via GitHub. Credentials where quickly invalidated and repo has removed.
+- start: 2022-10-27
+  event: Case file published
 ips: n/a
 ---
 
