--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -1,7 +1,6 @@
 ---
 layout: case
-title: "DIVD-2022-00045 - Injection vulnerability found within Socket.io"
-divd: DIVD-2022-00045
+title: "Injection vulnerability found within Socket.io"
 author: Victor Pasman
 lead: Ralph Horn
 status: Open
