--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -45,5 +45,5 @@ We recommend to use the latest version of Socket.io
 
 ## More information
 
-* [CVE-2022-2421](https://csirt.divd.nl/cves/CVE-2022-2421)
+* {% cve CVE-2022-2421 %}
 
