--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -29,6 +29,9 @@ timeline:
 - start: 2022-10-25
   end:
   event: Limited Disclosure
+jekyll-secinfo:
+  cve:
+    url: /cves/CVE-
 ---
 
 ## Summary
