--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -4,6 +4,9 @@ title: "Injection vulnerability found within Socket.io"
 author: Victor Pasman
 lead: Ralph Horn
 status: Open
+start: 2022-04-29
+end: 
+ips: 0
 researchers:
 - Victor Pasman
 - Frank Breedijk
