--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -5,6 +5,8 @@ divd: DIVD-2022-00020
 author: Victor Pasman
 lead: Ralph Horn
 status: Open
+start: 2022-02-23
+end: 
 researchers:
 - Victor Pasman
 - Frank Breedijk
