--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "DIVD-2022-00020 - Multiple injection vulnerabilities identified within Feathers.js"
+title: "Multiple injection vulnerabilities identified within Feathers.js"
 divd: DIVD-2022-00020
 author: Victor Pasman
 lead: Ralph Horn
