--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -13,7 +13,10 @@ researchers:
 - Arthur Tolsman (codean.io)
 - Kevin Valk (codean.io)
 - Thomas Rinsma (codean.io)
-cves: CVE-2022-2422, CVE-2022-29822, CVE-2022-29823
+cves: 
+- CVE-2022-2422
+- CVE-2022-29822
+- CVE-2022-29823
 product: "Feathers.js"
 versions: "6.x < 6.3.4"
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
