--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -37,7 +37,9 @@ timeline:
   end:
   event: Limited Disclosure
 ---
-
+jekyll-secinfo:
+  cve:
+    url: /cves/CVE-
 ## Summary
 By leveraging the vulnerabilities, an unauthenticated attacker with network access to the application using Feathers.js can execute arbitrary system commands.
 
