--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -54,6 +54,6 @@ We recommend to use the latest version of Feathers.js
 
 ## More information
 
-* [CVE-2022-2422](https://csirt.divd.nl/cves/CVE-2022-2422)
-* [CVE-2022-29822](https://csirt.divd.nl/cves/CVE-2022-29822)
-* [CVE-2022-29823](https://csirt.divd.nl/cves/CVE-2022-29823)
+* {% cve CVE-2022-2422 %}
+* {% cve CVE-2022-29822 %}
+* {% cve CVE-2022-29823 %}
