--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -7,6 +7,7 @@ status: Open
 start: 2022-04-29
 end: 
 ips: 0
+except: A injection vulnerability was identified in Socket.io which can result in Remote Code Execution (RCE)
 researchers:
 - Victor Pasman
 - Frank Breedijk
