--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -3,7 +3,7 @@ layout: case
 title: "Multiple injection vulnerabilities identified within Feathers.js"
 author: Victor Pasman
 lead: Ralph Horn
-except: "Multiple injection vulnerabilities in Feathers.js which can result in Remote Code Execution (RCE)."
+except: "Multiple injection vulnerabilities are identified in Feathers.js, these can result in Remote Code Execution (RCE) on the system."
 status: Open
 start: 2022-02-23
 end: 
