--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -3,7 +3,7 @@ layout: case
 title: "Multiple injection vulnerabilities identified within Feathers.js"
 author: Victor Pasman
 lead: Ralph Horn
-except: "Multiple injection vulnerabilities are identified in Feathers.js, these can result in Remote Code Execution (RCE) on the system."
+excerpt: "Multiple injection vulnerabilities are identified in Feathers.js, these can result in Remote Code Execution (RCE) on the system."
 status: Open
 start: 2022-02-23
 end: 
@@ -25,7 +25,7 @@ timeline:
 - start: 2022-03-23
   end:
   event: Vulnerability discovered by Thomas Rinsma and Kevin Valk from Codean.
-- start: 2022-04-4
+- start: 2022-04-04
   end:
   event: Testing by DIVD conforms that the vulnerabilities are still present in the product.
 - start: 2022-06-10
