[DIVD-2022-00007] Add reference to Centre for Cyber Security Belgium (CCB)

--- a/_cases/2022/DIVD-2022-00007.md
+++ b/_cases/2022/DIVD-2022-00007.md
@@ -99,6 +99,9 @@ timeline:
 - start: 2022-05-01
   end: 2022-05-01
   event: "First scan & notify of CNAMES of .ONLINE domains"
+- start: 2022-10-28
+  end: 
+  event: "Handed out scan result for Belgium to Centre for Cyber Security Belgium (CCB)"
 ips: 68966
 
 ---
