--- a/_cases/2022/DIVD-2022-00006.md
+++ b/_cases/2022/DIVD-2022-00006.md
@@ -17,7 +17,7 @@ patch_status: n/a
 -workaround: n/a
 status : Closed
 start: 2022-02-07
-end:
+end: 2022-07-13
 timeline:
 - start: 2022-02-07
   end:
